--- a/app/frontend/src/pages/login_page/index.html
+++ b/app/frontend/src/pages/login_page/index.html
@@ -54,6 +54,16 @@
                 <input type="password" id="password" name="password" placeholder="Enter your password" required />
             </div>
             <div class="input_box" style="display: flex; align-items: center; margin-bottom: 18px;">
+            <div class="input_box" style="margin-bottom: 12px;">
+                <label for="role">Role</label>
+                <select id="role" name="role" style="width:100%; height:34px; border:1px solid #DADAF2; border-radius:5px; background:#F8F8FB; font-size:13px; padding:0px 8px;">
+                    <option value="Professor">Professor</option>
+                    <option value="TA">TA</option>
+                    <option value="Student">Student</option>
+                </select>
+            </div>
+            </div>
+            <div class="input_box" style="display: flex; align-items: center; margin-bottom: 18px;">
                 <input type="checkbox" id="remember" name="remember" style="width:16px; height:16px; margin-right:8px;">
                 <label for="remember" style="font-size: 12px; font-weight: 500; cursor:pointer;">Remember me</label>
             </div>
