initate commit for google authenication and backend

--- a/app/frontend/src/pages/login_page/index.html
+++ b/app/frontend/src/pages/login_page/index.html
@@ -73,9 +73,9 @@
             <p class="separator"><span>or</span></p>
             <div class="login_option">
                 <div class="option" style="width:100%">
-                    <a href="#" style="justify-content:center;">
-                        <img src="/assets/logo/icons8-google.svg" alt="Google" style="max-width:25px; margin-right:10px;"/>Login with Google
-
+                    <a href="/auth/google/start" style="justify-content:center;">
+                        <img src="/assets/logo/icons8-google.svg" alt="Google" style="max-width:25px; margin-right:10px;"/>
+                        Login with Google
                     </a>
                 </div>
             </div>
