--- a/app/frontend/src/pages/dashboards/team_lead.html
+++ b/app/frontend/src/pages/dashboards/team_lead.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teaching Assistant Dashboard | Conductor</title>
+    <title>Team Lead Dashboard | Conductor</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="page" data-role="teaching-assistant">
+    <div class="page" data-role="student">
         <header class="top-nav">
             <div class="brand">Conductor <span>App</span></div>
             <div class="nav-actions">
                 <div class="profile">
-                    <a href="/profile_page/profile.html" class="profile-link">
-                        <img id="dashboardProfileImg" src="/assets/logo/user.png" alt="Profile" style="width:32px;height:32px;border-radius:50%;object-fit:cover;" />
-                    </a>
+                <button class="profile-trigger">
+                    <img
+                    id="dashboardProfileImg"
+                    src="/assets/logo/user.png"
+                    alt="Profile"
+                    style="width:32px;height:32px;border-radius:50%;object-fit:cover;"
+                    />
+                </button>
+
+                <div class="profile-dropdown" id="profileDropdown">
+                    <a href="/profile_page/profile.html">Profile</a>
+                    <a href="/login_page/login.html" id="logoutBtn">Log Out</a>
+                </div>
                 </div>
             </div>
         </header>
 
         <section class="dashboard-header">
             <div>
-                <h1>Staff Dashboard</h1>
-                <small>Teaching Assistant view · CSE 210 </small>
+                <h1>Student Dashboard</h1>
+                <small>Team Lead view · CSE 210 </small>
             </div>
         </section>
 
@@ -37,11 +47,29 @@
             </article>
 
             <article class="dashboard-card">
-                <div class="card-icon">👥</div>
+                <div class="card-icon">🗂️</div>
                 <div class="card-content">
-                    <h2>Team Card</h2>
-                    <p>Access team assignments, progress updates, and collaboration tools.</p>
-                    <button class="card-btn">View Teams</button>
+                    <h2>Task Tracker</h2>
+                    <p>Monitor assigned tasks, due dates, and progress updates.</p>
+                    <button class="card-btn">View Tasks</button>
+                </div>
+            </article>
+
+            <article class="dashboard-card">
+                <div class="card-icon">📝</div>
+                <div class="card-content">
+                    <h2>Meeting Notes</h2>
+                    <p>Create, organize, or review your meeting notes and class discussions.</p>
+                    <button class="card-btn">Open Notes</button>
+                </div>
+            </article>
+
+            <article class="dashboard-card">
+                <div class="card-icon">📈</div>
+                <div class="card-content">
+                    <h2>Weekly Evaluation</h2>
+                    <p>Review performance summaries and submit weekly feedback reports.</p>
+                    <button class="card-btn">View Evaluation</button>
                 </div>
             </article>
 
