--- a/app/frontend/src/pages/login_page/index.html
+++ b/app/frontend/src/pages/login_page/index.html
@@ -10,6 +10,16 @@
     <main class="login_form">
         <form id="loginForm">
             <h3>Welcome to Conductor</h3>
+
+            <div style="height: 16px;"></div>
+            <div class="input_box">
+                <label for="firstname">First Name</label>
+                <input type="text" id="firstname" name="firstname" placeholder="First Name" required />
+            </div>
+            <div class="input_box">
+                <label for="lastname">Last Name</label>
+                <input type="text" id="lastname" name="lastname" placeholder="Last Name" required />
+            </div>
             <div class="input_box">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="name@conductor.edu" required />
@@ -25,7 +35,8 @@
                 <label for="role">Role</label>
                 <select id="role" name="role" required>
                     <option value="professor">Professor</option>
-                    <option value="ta">TA</option>
+                    <option value="Teaching Assistant">Teaching Assistant</option>
+                    <option value="team_lead">Team Lead</option>
                     <option value="student">Student</option>
                 </select>
             </div>
