--- a/app/frontend/src/pages/team_card/team_card.html
+++ b/app/frontend/src/pages/team_card/team_card.html
@@ -193,7 +193,7 @@
         document.getElementById('backDashboard').addEventListener('click', function(e) {
             e.preventDefault();
             var role = localStorage.getItem('role');
-            if (role === 'Professor') {
+            if (role === 'professor') {
                 window.location.href = '/dashboards/professor.html';
             } else {
                 window.location.href = '/dashboards/ta.html';
