--- a/app/frontend/src/pages/dashboards/student.html
+++ b/app/frontend/src/pages/dashboards/student.html
@@ -45,7 +45,7 @@
                 <div class="card-content">
                     <h2>Task Tracker</h2>
                     <p>Monitor assigned tasks, due dates, and progress updates.</p>
-                    <button class="card-btn">View Tasks</button>
+                    <button id="viewTasksBtn" class="card-btn">View Tasks</button>
                 </div>
             </article>
 
@@ -75,7 +75,11 @@
     <!-- Profile panel removed, navigation now goes to profile page -->
 
     <script src="script.js"></script>
-
+        <script>
+            document.getElementById('viewTasksBtn').addEventListener('click', function() {
+            window.location.href = '/task_tracker/task_tracker.html';
+            });
+        </script>
         <script>
             // Dropdown logic
             const profileImg = document.getElementById('dashboardProfileImg');
@@ -114,6 +118,7 @@
             });
         </script>
         <script>
+            /*
             window.addEventListener('DOMContentLoaded', function() {
                 var firstName = localStorage.getItem('firstName') || 'Avery';
                 var lastName = localStorage.getItem('lastName') || 'Lin';
@@ -125,6 +130,7 @@
                 document.getElementById('profRoleMeta').textContent = role;
                 document.getElementById('profEmail').textContent = email;
             });
+            */
         </script>
 </body>
 </html>
