Create evaluation rubric section for professor

--- a/app/frontend/src/pages/dashboards/professor.html
+++ b/app/frontend/src/pages/dashboards/professor.html
@@ -11,6 +11,12 @@
         <header class="top-nav">
             <div class="brand">Conductor <span>App</span></div>
             <div class="nav-actions">
+                <!-- <a href="/evaluation_rubric/evaluation_rubric.html" class="nav-btn eval-btn">
+                    Create a Course
+                </a> -->
+                <a href="/evaluation_rubric/evaluation_rubric.html" class="nav-btn eval-btn">
+                    Evaluation Rubric
+                </a>
                 <div class="profile">
                     <a href="/profile_page/profile.html" class="profile-link">
                         <div class="profile-dropdown-container" style="position:relative;">
@@ -20,6 +26,7 @@
                                 <a href="#" id="logoutBtn" style="display:block; padding:10px 16px; color:#d00; text-decoration:none;">Log Out</a>
                             </div>
                         </div>
+
                     </a>
                 </div>
             </div>
