--- a/app/frontend/src/pages/profile_page/profile.html
+++ b/app/frontend/src/pages/profile_page/profile.html
@@ -25,8 +25,8 @@
           </div>
           <input type="file" id="upload-photo" accept="image/*" hidden />
         </div>
-  <h1 id="profileFullName">Dr. Avery Lin</h1>
-  <p class="role" id="profileRole">Professor · CSE 210</p>
+  <h1 id="profileFullName"></h1>
+  <p class="role" id="profileRole"></p>
       </div>
 
       <div class="info-card">
