--- a/app/frontend/src/pages/evaluation_rubric/evaluation_rubric.html
+++ b/app/frontend/src/pages/evaluation_rubric/evaluation_rubric.html
@@ -114,7 +114,7 @@
     </section>
 
     <div class="evaluation-form-actions">
-            <button id="saveBtn">Save</button>
+            <button id="save-btn">Save</button>
     </div>
 
     <section class="profile-panel" id="profile-panel" aria-hidden="true">
