adding initial work journal form

--- a/app/frontend/src/pages/dashboards/team_lead.html
+++ b/app/frontend/src/pages/dashboards/team_lead.html
@@ -52,7 +52,7 @@
             <article class="dashboard-card">
                 <div class="card-icon">📝</div>
                 <div class="card-content">
-                    <h2>Meeting Notes</h2>
+                    <h2>Work Journal</h2>
                     <p>Create, organize, or review your meeting notes and class discussions.</p>
                     <button class="card-btn">Open Notes</button>
                 </div>
