--- a/app/frontend/src/pages/work_journal/work_journal.html
+++ b/app/frontend/src/pages/work_journal/work_journal.html
@@ -6,171 +6,213 @@
   <title>Work Journal | Conductor</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    <header class="top-nav">
-        <div class="brand">Conductor <span>App</span></div>
-        <div class="nav-actions" style="display:flex;align-items:center;gap:1.2rem;">
-            <a href="#" id="backDashboard" class="back-btn">← Back to Dashboard</a>
-            <div class="profile">
-                <a href="/profile_page/profile.html" class="profile-link">
-                    <div class="profile-dropdown-container" style="position:relative;">
-                        <img id="dashboardProfileImg" src="/assets/logo/user.png" alt="Profile" style="width:44px;height:44px;border-radius:50%;object-fit:cover;cursor:pointer;" />
-                        <div class="profile-dropdown" id="profileDropdown" style="display:none; position:absolute; top:48px; right:0; background:#fff; border:1px solid #ddd; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08); min-width:140px; z-index:10;">
-                            <a href="/profile_page/profile.html" style="display:block; padding:10px 16px; color:#222; text-decoration:none;">Profile</a>
-                            <a href="#" id="logoutBtn" style="display:block; padding:10px 16px; color:#d00; text-decoration:none;">Log Out</a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </header>
 
+<body>
+
+  <header class="top-nav">
+      <div class="brand">Conductor <span>App</span></div>
+
+      <div class="nav-actions" style="display:flex;align-items:center;gap:1.2rem;">
+          <a href="#" id="backDashboard" class="back-btn">← Back to Dashboard</a>
+
+          <div class="profile">
+              <a href="/profile_page/profile.html" class="profile-link">
+                  <div class="profile-dropdown-container" style="position:relative;">
+                      <img id="dashboardProfileImg" src="/assets/logo/user.png" 
+                           style="width:44px;height:44px;border-radius:50%;object-fit:cover;cursor:pointer;" />
+                      <div id="profileDropdown" class="profile-dropdown"
+                          style="display:none; position:absolute; top:48px; right:0; background:#fff; border:1px solid #ddd; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08); min-width:140px;">
+                          <a href="/profile_page/profile.html" style="padding:10px 16px; display:block;">Profile</a>
+                          <a id="logoutBtn" style="padding:10px 16px; display:block; color:#d00;">Log Out</a>
+                      </div>
+                  </div>
+              </a>
+          </div>
+      </div>
+  </header>
+
+
+
+  <div class="page-layout">
     <section class="work-journal-container">
+
         <h2 class="wj-title">Daily Work Journal Form</h2>
 
-        <form id="workJournalForm" class="wj-form">
+        <form id="workJournalForm">
 
-            <!-- What did you do -->
             <div class="wj-field">
-            <label for="tasksDone">What did you work on today?</label>
-            <textarea id="tasksDone" placeholder="Describe what you completed, what you're working on, or anything you want to share..." required></textarea>
+                <label for="tasksDone">What did you work on today?</label>
+                <textarea id="tasksDone" required></textarea>
             </div>
 
-            <!-- Emotional sentiment -->
             <div class="wj-field">
-            <label>How are you feeling?</label>
-            <div class="sentiment-options">
-                <label><input type="radio" name="sentiment" value="😀 Great"> 😀 Great</label>
-                <label><input type="radio" name="sentiment" value="🙂 Good"> 🙂 Good</label>
-                <label><input type="radio" name="sentiment" value="😐 Okay"> 😐 Okay</label>
-                <label><input type="radio" name="sentiment" value="😟 Stressed"> 😟 Stressed</label>
-                <label><input type="radio" name="sentiment" value="😫 Overwhelmed"> 😫 Overwhelmed</label>
+                <label>How are you feeling?</label>
+                <div class="sentiment-options">
+                    <label><input type="radio" name="sentiment" value="😀 Great"> 😀 Great</label>
+                    <label><input type="radio" name="sentiment" value="🙂 Good"> 🙂 Good</label>
+                    <label><input type="radio" name="sentiment" value="😐 Okay"> 😐 Okay</label>
+                    <label><input type="radio" name="sentiment" value="😟 Stressed"> 😟 Stressed</label>
+                    <label><input type="radio" name="sentiment" value="😫 Overwhelmed"> 😫 Overwhelmed</label>
+                </div>
+                <textarea id="sentimentNotes" placeholder="Optional: describe your mood..."></textarea>
             </div>
 
-            <textarea id="sentimentNotes" placeholder="Optional: Want to elaborate on your mood?"></textarea>
-            </div>
-
-            <!-- Reach out -->
             <div class="wj-field">
-            <label for="reachOut">Do you need to reach out to someone?</label>
-            <select id="reachOut">
-                <option value="">No, I'm good</option>
-                <option value="team_lead">Team Lead</option>
-                <option value="ta">Teaching Assistant</option>
-                <option value="professor">Professor</option>
-            </select>
-            <textarea id="reachOutMessage" placeholder="Optional: Write a message you'd like them to see..."></textarea>
+                <label for="reachOut">Do you need to reach out to someone?</label>
+                <select id="reachOut">
+                    <option value="">No, I'm good</option>
+                    <option value="team_lead">Team Lead</option>
+                    <option value="ta">Teaching Assistant</option>
+                    <option value="professor">Professor</option>
+                </select>
+                <textarea id="reachOutMessage" placeholder="Optional message..."></textarea>
             </div>
 
-            <!-- Repo link -->
             <div class="wj-field">
-            <label for="repoLink">GitHub repo (optional)</label>
-            <input type="url" id="repoLink" placeholder="https://github.com/yourproject/commit/...">
+                <label for="repoLink">GitHub repo (optional)</label>
+                <input type="url" id="repoLink" placeholder="https://github.com/...">
             </div>
 
-            <!-- Attachments (optional) -->
             <div class="wj-field">
-            <label>Attach files or screenshots (optional)</label>
-            <input type="file" id="wjFiles" multiple>
+                <label>Attach files (optional)</label>
+                <input type="file" id="wjFiles" multiple>
             </div>
 
-            <!-- Submit -->
-            <div class="wj-submit">
-            <button type="submit" class="wj-btn">Submit Journal Entry</button>
-            </div>
-
+            <button class="wj-btn" type="submit">Submit Journal Entry</button>
         </form>
 
-        <div id="wjSuccess" class="wj-success" style="display:none;">
-            ✔ Your journal has been submitted!
-        </div>
-        <script>
-            // Hide the success message after 6 seconds
-            document.addEventListener('DOMContentLoaded', function() {
-            const wjSuccess = document.getElementById("wjSuccess");
-            document.getElementById("workJournalForm").addEventListener("submit", function() {
-                if (wjSuccess) {
-                wjSuccess.style.display = "block";
-                setTimeout(() => {
-                    wjSuccess.style.display = "none";
-                }, 5000);
-                }
-            });
-            });
-        </script>
+        <div id="wjSuccess" class="wj-success">✔ Journal submitted!</div>
     </section>
+  </div>
 
-    <section class="profile-panel" id="profile-panel" aria-hidden="true">
-    <!-- Profile panel removed, navigation now goes to profile page -->
 
-    <script src="script.js"></script>
-        <script>
-            // Profile dropdown logic
-            const profileImg = document.getElementById('dashboardProfileImg');
-            const dropdown = document.getElementById('profileDropdown');
-            if (profileImg && dropdown) {
-                profileImg.addEventListener('mouseenter', () => {
-                    dropdown.style.display = 'block';
-                });
-                profileImg.addEventListener('mouseleave', () => {
-                    setTimeout(() => {
-                        if (!dropdown.matches(':hover')) dropdown.style.display = 'none';
-                    }, 150);
-                });
-                dropdown.addEventListener('mouseleave', () => {
-                    dropdown.style.display = 'none';
-                });
-                dropdown.addEventListener('mouseenter', () => {
-                    dropdown.style.display = 'block';
-                });
-                document.getElementById('logoutBtn').addEventListener('click', function(e) {
-                    e.preventDefault();
-                    localStorage.clear();
-                    window.location.href = '/login';
-                });
-            }
-        </script>
-        <script>
-            window.addEventListener('DOMContentLoaded', function() {
-                var savedImg = localStorage.getItem('profileImg');
-                if (savedImg) {
-                    var img1 = document.getElementById('dashboardProfileImg');
-                    if (img1) img1.src = savedImg;
-                }
-            });
-        </script>
-        <script>
-            window.addEventListener('DOMContentLoaded', function() {
-                var firstName = localStorage.getItem('firstName') || 'Avery';
-                var lastName = localStorage.getItem('lastName') || 'Lin';
-                var role = localStorage.getItem('role') || 'Professor';
-                var email = localStorage.getItem('email') || 'avery.lin@conductor.edu';
-                document.getElementById('profName').textContent = firstName + ' ' + lastName;
-                document.getElementById('profFullName').textContent = firstName + ' ' + lastName;
-                document.getElementById('profRole').textContent = role + ' · CSE 210';
-                document.getElementById('profRoleMeta').textContent = role;
-                document.getElementById('profEmail').textContent = email;
-            });
-        </script>
 
-        <script>
-        // Dynamic dashboard link based on role
-        document.getElementById('backDashboard').addEventListener('click', function(e) {
-            e.preventDefault();
-            var role = localStorage.getItem('role');
-            if (role === 'professor') {
-                window.location.href = '/dashboards/professor.html';
-            } else if (role === 'Teaching Assistant') {
-                window.location.href = '/dashboards/ta.html';
-            } else if (role === 'team_lead') {
-                window.location.href = '/dashboards/team_lead.html';
-            } else {
-                window.location.href = '/dashboards/student.html';
-            }
+  <aside class="wj-past-sidebar" id="wjPastSidebar">
+      <h3 class="wj-past-title">Past Journal Entries</h3>
+      <div id="wjPastList" class="wj-past-list"></div>
+  </aside>
+
+  <!-- Overlay -->
+  <div id="wjOverlay" class="wj-overlay"></div>
+
+  <!-- Floating Button -->
+  <button id="wjToggleBtn" class="wj-toggle-btn">Past Journals</button>
+
+
+
+  <div id="wjPreviewModal" class="wj-preview-modal">
+      <div class="wj-preview-content">
+          <span id="wjClosePreview" class="wj-close-preview">✖</span>
+
+          <h3 id="wjPreviewDate"></h3>
+
+          <p><strong>Work Done:</strong></p>
+          <p id="wjPreviewTasks"></p>
+
+          <p><strong>Mood:</strong></p>
+          <p id="wjPreviewSentiment"></p>
+
+          <p><strong>Mood Notes:</strong></p>
+          <p id="wjPreviewNotes"></p>
+
+          <p><strong>Reach Out:</strong></p>
+          <p id="wjPreviewReachOut"></p>
+
+          <p><strong>Repo Link:</strong></p>
+          <p id="wjPreviewRepo"></p>
+      </div>
+  </div>
+
+
+
+
+  <script src="script.js"></script>
+
+    <script>
+    // Profile dropdown logic
+    const profileImg = document.getElementById('dashboardProfileImg');
+    const dropdown = document.getElementById('profileDropdown');
+    if (profileImg && dropdown) {
+        profileImg.addEventListener('mouseenter', () => {
+            dropdown.style.display = 'block';
         });
-        </script>
+        profileImg.addEventListener('mouseleave', () => {
+            setTimeout(() => {
+                if (!dropdown.matches(':hover')) dropdown.style.display = 'none';
+            }, 150);
+        });
+        dropdown.addEventListener('mouseleave', () => {
+            dropdown.style.display = 'none';
+        });
+        dropdown.addEventListener('mouseenter', () => {
+            dropdown.style.display = 'block';
+        });
+        document.getElementById('logoutBtn').addEventListener('click', function(e) {
+            e.preventDefault();
+            localStorage.clear();
+            window.location.href = '/login';
+        });
+    }
+    </script>
 
-        <script>
+    <script>
+    window.addEventListener('DOMContentLoaded', function() {
+        var savedImg = localStorage.getItem('profileImg');
+        if (savedImg) {
+            var img1 = document.getElementById('dashboardProfileImg');
+            if (img1) img1.src = savedImg;
+        }
+    });
+    </script>
+
+    <script>
+    window.addEventListener('DOMContentLoaded', function() {
+        var firstName = localStorage.getItem('firstName') || 'Avery';
+        var lastName = localStorage.getItem('lastName') || 'Lin';
+        var role = localStorage.getItem('role') || 'Professor';
+        var email = localStorage.getItem('email') || 'avery.lin@conductor.edu';
+        document.getElementById('profName').textContent = firstName + ' ' + lastName;
+        document.getElementById('profFullName').textContent = firstName + ' ' + lastName;
+        document.getElementById('profRole').textContent = role + ' · CSE 210';
+        document.getElementById('profRoleMeta').textContent = role;
+        document.getElementById('profEmail').textContent = email;
+    });
+    </script>
+
+    <script>
+    // Dynamic dashboard link based on role
+    document.getElementById('backDashboard').addEventListener('click', function(e) {
+        e.preventDefault();
+        var role = localStorage.getItem('role');
+        if (role === 'professor') {
+            window.location.href = '/dashboards/professor.html';
+        } else if (role === 'Teaching Assistant') {
+            window.location.href = '/dashboards/ta.html';
+        } else if (role === 'team_lead') {
+            window.location.href = '/dashboards/team_lead.html';
+        } else {
+            window.location.href = '/dashboards/student.html';
+        }
+    });
+    </script>
+    <script>
+        const sidebar = document.getElementById("wjPastSidebar");
+        const toggleBtn = document.getElementById("wjToggleBtn");
+        const overlay = document.getElementById("wjOverlay");
+
+        toggleBtn.addEventListener("click", () => {
+            sidebar.classList.toggle("open");
+            overlay.classList.toggle("show");
+        });
+
+        overlay.addEventListener("click", () => {
+            sidebar.classList.remove("open");
+            overlay.classList.remove("show");
+        });
+    </script>
+
+    <!-- Save journal -->
+    <script>
         document.getElementById("workJournalForm").addEventListener("submit", function(e) {
             e.preventDefault();
 
@@ -184,25 +226,55 @@
                 date: new Date().toISOString()
             };
 
-            // Save locally (or send to server)
             let journal = JSON.parse(localStorage.getItem("workJournal") || "[]");
             journal.push(entry);
             localStorage.setItem("workJournal", JSON.stringify(journal));
 
-            // Handle contact
-            if (entry.reachOut) {
-                console.log("Need to notify:", entry.reachOut, entry.reachOutMessage);
-                // integrations with email/slack/chatbot can go here
-            }
-
-            // Show success
             document.getElementById("wjSuccess").style.display = "block";
+            setTimeout(() => document.getElementById("wjSuccess").style.display = "none", 4000);
 
-            // Clear form
             this.reset();
+            loadPastJournals();
         });
-        </script>
+    </script>
 
-    
+    <!-- Load past journals -->
+    <script>
+        function loadPastJournals() {
+            const list = document.getElementById("wjPastList");
+            list.innerHTML = "";
+
+            let journal = JSON.parse(localStorage.getItem("workJournal") || "[]");
+            journal.sort((a, b) => new Date(b.date) - new Date(a.date));
+
+            journal.forEach(entry => {
+                const item = document.createElement("div");
+                item.className = "wj-past-item";
+                item.textContent = new Date(entry.date).toLocaleString();
+                item.addEventListener("click", () => showJournalPreview(entry));
+                list.appendChild(item);
+            });
+        }
+        loadPastJournals();
+    </script>
+
+    <!-- Preview modal -->
+    <script>
+        function showJournalPreview(entry) {
+            document.getElementById("wjPreviewDate").textContent = new Date(entry.date).toLocaleString();
+            document.getElementById("wjPreviewTasks").textContent = entry.tasksDone || "—";
+            document.getElementById("wjPreviewSentiment").textContent = entry.sentiment || "—";
+            document.getElementById("wjPreviewNotes").textContent = entry.sentimentNotes || "—";
+            document.getElementById("wjPreviewReachOut").textContent = entry.reachOut ? entry.reachOut + ": " + entry.reachOutMessage : "—";
+            document.getElementById("wjPreviewRepo").textContent = entry.repoLink || "—";
+
+            document.getElementById("wjPreviewModal").style.display = "flex";
+        }
+
+        document.getElementById("wjClosePreview").addEventListener("click", () => {
+            document.getElementById("wjPreviewModal").style.display = "none";
+        });
+    </script>
+
 </body>
 </html>
