add work journal to team lead

--- a/app/frontend/src/pages/dashboards/team_lead.html
+++ b/app/frontend/src/pages/dashboards/team_lead.html
@@ -54,7 +54,7 @@
                 <div class="card-content">
                     <h2>Work Journal</h2>
                     <p>Create, organize, or review your meeting notes and class discussions.</p>
-                    <button class="card-btn">Open Notes</button>
+                    <button id="viewWorkJournalBtn" class="card-btn">Open Notes</button>
                 </div>
             </article>
 
@@ -87,6 +87,11 @@
         <script>
             document.getElementById('viewTasksBtn').addEventListener('click', function() {
             window.location.href = '/task_tracker/task_tracker.html';
+            });
+        </script>
+        <script>
+            document.getElementById('viewWorkJournalBtn').addEventListener('click', function() {
+            window.location.href = '/work_journal/work_journal.html';
             });
         </script>
         <script>
