Add Cypress integration and configure ESLint for frontend
add cypress for cicd

add exmaple cypress and config eslint from frontend

fix htmllint scan scope and fix html mistake and let eslint scope

--- a/app/frontend/src/pages/dashboards/professor.html
+++ b/app/frontend/src/pages/dashboards/professor.html
@@ -127,5 +127,6 @@
                 document.getElementById('profEmail').textContent = email;
             });
         </script>
+    </section>
 </body>
 </html>
