--- a/app/frontend/src/pages/dashboards/ta.html
+++ b/app/frontend/src/pages/dashboards/ta.html
@@ -118,5 +118,6 @@
                 document.getElementById('profEmail').textContent = email;
             });
         </script>
+    </section>
 </body>
 </html>
