--- a/app/frontend/src/pages/team_card/team_card.html
+++ b/app/frontend/src/pages/team_card/team_card.html
@@ -158,5 +158,6 @@
             }
             window.addEventListener('DOMContentLoaded', loadTeams);
         </script>
+    </section> 
 </body>
 </html>
